{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 117,
  "lineage": "356f5656-4650-c591-5196-1f1c634da3fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d97ef13c06b05a19",
            "arn": "arn:aws:ec2:us-east-2:909408495248:instance/i-09d2df7c43e67f7ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d2df7c43e67f7ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key-boinet",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0766c5d1d204b3e8b",
            "private_dns": "ip-172-31-5-227.us-east-2.compute.internal",
            "private_ip": "172.31.5.227",
            "public_dns": "ec2-3-145-82-190.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.82.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f565b315bb6a9346",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_HTTPD_BOINET",
              "allow_SSH_BOINET"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ff980494",
            "tags": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "tags_all": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05251d07a99a273fe",
              "sg-05f64564614c14421"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_HTTPD",
            "aws_security_group.allow_SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTPD",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909408495248:security-group/sg-05f64564614c14421",
            "description": "Allow httpd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f64564614c14421",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpd",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_HTTPD_BOINET",
            "name_prefix": "",
            "owner_id": "909408495248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "tags_all": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "timeouts": null,
            "vpc_id": "vpc-a00c78cb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909408495248:security-group/sg-05251d07a99a273fe",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05251d07a99a273fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH_BOINET",
            "name_prefix": "",
            "owner_id": "909408495248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "tags_all": {
              "Groups": "app",
              "Name": "Boinet_app_1",
              "Owner": "Boinet-Lucas"
            },
            "timeouts": null,
            "vpc_id": "vpc-a00c78cb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}